--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,11 @@ script:
 deploy:
     local_dir: public # Default static site output dir for Hugo
     repo: mengtanx/mengtanx.com # This is the slug of the repo you want to deploy your site to
-    target_branch: gh-pages # GitHub pages branch to deploy to (in other cases it can be gh-pages)
+    target_branch: master # GitHub pages branch to deploy to (in other cases it can be gh-pages)
     provider: pages
     skip_cleanup: true
     github_token: ${GITHUB_TOKEN} # This is the authentication which you will setup in the next step in travis-ci dashboard
     email: mengtanx@gmail.com
     name: ${GITHUB_USERNAME}
     on:
-    branch: master
+    branch: gh-pages
