--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy:
     provider: pages
     skip_cleanup: true
     github_token: ${GITHUB_TOKEN} # This is the authentication which you will setup in the next step in travis-ci dashboard
-    email: mengtanx@gmail.com
+    email: ${GITHUB_EMAIL}
     name: ${GITHUB_USERNAME}
     on:
     branch: gh-pages
